tests/fixtures/invalid/array-indentation.php
<?php

declare(strict_types=1);

$foo = [

'invalid' => 'i am invalid',

];
